--- a/src/app/auth/pages/login/login.page.html
+++ b/src/app/auth/pages/login/login.page.html
@@ -24,7 +24,7 @@
     <ion-button expand="block">
       <ion-icon name="logo-facebook" slot="start"></ion-icon>
       <!-- Visite o site para ver a documentação do button: https://ionicframework.com/docs/api/button -->
-      Login with Facebook of Samuel França
+      Login with Facebook
     </ion-button>
 
 </ion-content>
